# blasr

./: .gitignore  .gitmodules  Blasr.cpp  BlasrGitHash.h.in  BlasrVersion.h.in  CMakeLists.txt  README.INSTALL.md  README.md  alignment  bamboo_build.sh  bamboo_build_cmake.sh  bamboo_test.sh  blasr.java  configure.py  cram.mk  makefile  meson.build  meson_options.txt  rules.mk
cmake/: FindHTSlib.cmake  blasr-ccache.cmake  blasr-compilerflags.cmake  blasr-config.cmake  blasr-dependencies.cmake
ctest/: affineAlign.t  aggressiveIntervalCut.t  alignScore.t  bamConcordant.t  bamIn.t  bamOut.t  bug25328.t  bug25766.t  ccsH5.t  cigarAdjecentIndels.t  concordant.t  dataset.t  deterministic.t  ecoli.t  fastMaxInterval.t  filtercriteria.t  fofn.t  hitpolicy.t  holeNumbers.t  long-cigar.t  m0-5.t  meson.build  multipart.t  noSplitSubreads.t  open_fail.t  pgc-big.t  pgc-concordant-naive.t  pgc-concordant.t  pgc-fasta.t  pgc-naive.t  unaligned.t  useccsallBestN1.t  useccsallLargeGenome.t  verbose.t
doc/: EXAMPLES.md  INSTALL_CMAKE.md  INSTALL_MAKE.md
extrautils/: BuildSequenceDB.cpp  BwtToSuffixArray.cpp  Evolve.cpp  ExciseRepeats.cpp  PrintTupleCountTable.cpp  SALS.cpp  SAModify.cpp  SWMatcher.cpp  SimpleShredder.cpp  StoreQualityByContextFromCmpH5.cpp  SuffixArrayToBWT.cpp  makefile  meson.build
extrautils/ctest/: setup.sh
iblasr/: BlasrAlign.hpp  BlasrAlignImpl.hpp  BlasrHeaders.h  BlasrMiscs.hpp  BlasrMiscsImpl.hpp  BlasrUtils.hpp  BlasrUtilsImpl.hpp  MappingBuffers.hpp  MappingIPC.h  MappingParameters.h  MappingSemaphores.h  ReadAlignments.hpp  RegisterBlasrOptions.h  RegisterFilterOptions.h
scripts/ci/: build.sh  checkout-submodules.sh
subprojects/: blasr_libcpp.wrap
tools/: check-formatting  format-all
utils/: LoadPulses.cpp  PulseToFasta.cpp  SAWriter.cpp  SDPMatcher.cpp  SamFilter.cpp  SamToCmpH5.cpp  SamToM4.cpp  ToAfg.cpp  makefile  meson.build
utils/bam2bax/: BUILD.txt  CMakeLists.txt  makefile
utils/bam2bax/src/: CMakeLists.txt
utils/bam2bax/tests/: CMakeLists.txt
utils/bax2bam/: CMakeLists.txt  makefile
utils/bax2bam/src/: CMakeLists.txt  IConverter.cpp  main.cpp
utils/bax2bam/tests/: CMakeLists.txt  bax2bam.t
utils/bax2bam/tests/src/: TestData.h.in  test_ccs.cpp  test_hqregions.cpp  test_polymerase.cpp  test_subreads.cpp
utils/ctest/: sawriter.t  sdpMatcher.t  setup.sh
