###########
# Sources #
###########

blasr_sources += files([
  'SuffixArrayToBWT.cpp',
  'BwtToSuffixArray.cpp',
  'SWMatcher.cpp',
  'SAModify.cpp',
  'ExciseRepeats.cpp',
  'StoreQualityByContextFromCmpH5.cpp',
  'SALS.cpp',
  'SimpleShredder.cpp',
  'Evolve.cpp',
  'BuildSequenceDB.cpp',
  'PrintTupleCountTable.cpp'])
